[package]
name = "bevy_editor_real"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_mod_picking = { version = "0.17.0", default-features = false, features = ["backend_raycast", "backend_bevy_ui", "backend_sprite", "selection"] }
